--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "node server.js",
     "front": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
